(doc): Memory Tuning : Java